// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/text-area/TextAreaField should forward innerRef to textareaRef 1`] = `
<TextArea
  error="error"
  hideOptionalLabel={true}
  label="Enter things"
  name="textarea"
  onBlur="onblur"
  onChange="onchange"
  textareaRef="ref"
  value="value"
/>
`;

exports[`components/text-area/TextAreaField should hide optional label when required 1`] = `
<TextArea
  error="error"
  hideOptionalLabel={true}
  label="Enter things"
  name="textarea"
  onBlur="onblur"
  onChange="onchange"
  value="value"
/>
`;

exports[`components/text-area/TextAreaField should render properly 1`] = `
<TextArea
  error={null}
  label="Enter things"
  name="textarea"
  onBlur="onblur"
  onChange="onchange"
  value="value"
/>
`;

exports[`components/text-area/TextAreaField should render properly with error 1`] = `
<TextArea
  error="error"
  label="Enter things"
  name="textarea"
  onBlur="onblur"
  onChange="onchange"
  value="value"
/>
`;
